--- a/mise.toml
+++ b/mise.toml
@@ -107,6 +107,63 @@ run = "go test -bench=. -benchmem -run='^$' -cpuprofile=cpu.prof -timeout=10m ./
 description = "Run benchmarks with memory profile"
 run = "go test -bench=. -benchmem -run='^$' -memprofile=mem.prof -timeout=10m ./... && echo 'Profile saved to mem.prof. View with: go tool pprof -http=:8080 mem.prof'"
 
+[tasks."bench:compare"]
+description = "Compare benchmarks between current branch and main"
+run = """
+#!/usr/bin/env bash
+set -euo pipefail
+
+# Install benchstat if not available
+if ! command -v benchstat &>/dev/null; then
+  echo "Installing benchstat..."
+  go install golang.org/x/perf/cmd/benchstat@latest
+fi
+
+BENCH_PATTERN="${BENCH_PATTERN:-.}"
+BENCH_COUNT="${BENCH_COUNT:-6}"
+BENCH_TIMEOUT="${BENCH_TIMEOUT:-10m}"
+BASE_REF="${BASE_REF:-main}"
+
+current_branch=$(git rev-parse --abbrev-ref HEAD)
+if [ "$current_branch" = "$BASE_REF" ]; then
+  echo "Already on $BASE_REF — nothing to compare. Run from a feature branch."
+  exit 1
+fi
+
+tmpdir=$(mktemp -d)
+new_out="$tmpdir/new.txt"
+old_out="$tmpdir/old.txt"
+trap 'rm -rf "$tmpdir"' EXIT
+
+echo "=== Benchmarking current branch ($current_branch) ==="
+go test -bench="$BENCH_PATTERN" -benchmem -run='^$' -count="$BENCH_COUNT" -timeout="$BENCH_TIMEOUT" ./... > "$new_out" 2>&1 || true
+
+# Check for uncommitted changes
+has_changes=false
+if ! git diff --quiet || ! git diff --cached --quiet; then
+  has_changes=true
+  echo "Stashing uncommitted changes..."
+  git stash push -m "bench:compare auto-stash"
+fi
+
+echo ""
+echo "=== Benchmarking base ($BASE_REF) ==="
+git checkout "$BASE_REF" --quiet
+go test -bench="$BENCH_PATTERN" -benchmem -run='^$' -count="$BENCH_COUNT" -timeout="$BENCH_TIMEOUT" ./... > "$old_out" 2>&1 || true
+
+echo ""
+echo "=== Switching back to $current_branch ==="
+git checkout "$current_branch" --quiet
+if [ "$has_changes" = true ]; then
+  git stash pop --quiet
+fi
+
+echo ""
+echo "=== Results (base=$BASE_REF vs current=$current_branch) ==="
+echo ""
+benchstat "$old_out" "$new_out"
+"""
+
 [tasks."test:e2e"]
 description = "Run E2E tests with real agent calls (requires claude CLI)"
 # -count=1 disables test caching since E2E tests call real external agents
