--- a/mise.toml
+++ b/mise.toml
@@ -100,12 +100,26 @@ description = "Run all benchmarks"
 run = "go test -bench=. -benchmem -run='^$' -timeout=10m ./..."
 
 [tasks."bench:cpu"]
-description = "Run benchmarks with CPU profile"
-run = "go test -bench=. -benchmem -run='^$' -cpuprofile=cpu.prof -timeout=10m ./... && echo 'Profile saved to cpu.prof. View with: go tool pprof -http=:8080 cpu.prof'"
+description = "Run benchmarks with CPU profile (single package)"
+run = """
+#!/usr/bin/env bash
+set -euo pipefail
+PKG="${BENCH_PKG:-./cmd/entire/cli/benchutil/}"
+echo "Profiling package: $PKG (override with BENCH_PKG=./path/to/pkg)"
+go test -bench=. -benchmem -run='^$' -cpuprofile=cpu.prof -timeout=10m "$PKG"
+echo "Profile saved to cpu.prof. View with: go tool pprof -http=:8080 cpu.prof"
+"""
 
 [tasks."bench:mem"]
-description = "Run benchmarks with memory profile"
-run = "go test -bench=. -benchmem -run='^$' -memprofile=mem.prof -timeout=10m ./... && echo 'Profile saved to mem.prof. View with: go tool pprof -http=:8080 mem.prof'"
+description = "Run benchmarks with memory profile (single package)"
+run = """
+#!/usr/bin/env bash
+set -euo pipefail
+PKG="${BENCH_PKG:-./cmd/entire/cli/benchutil/}"
+echo "Profiling package: $PKG (override with BENCH_PKG=./path/to/pkg)"
+go test -bench=. -benchmem -run='^$' -memprofile=mem.prof -timeout=10m "$PKG"
+echo "Profile saved to mem.prof. View with: go tool pprof -http=:8080 mem.prof"
+"""
 
 [tasks."bench:compare"]
 description = "Compare benchmarks between current branch and main"
@@ -133,7 +147,21 @@ fi
 tmpdir=$(mktemp -d)
 new_out="$tmpdir/new.txt"
 old_out="$tmpdir/old.txt"
-trap 'rm -rf "$tmpdir"' EXIT
+
+cleanup() {
+  local exit_code=$?
+  # Restore original branch if we're not on it
+  if [ "$(git rev-parse --abbrev-ref HEAD)" != "$current_branch" ]; then
+    git checkout "$current_branch" --quiet 2>/dev/null || true
+  fi
+  # Pop stash if we pushed one
+  if [ "$has_changes" = true ]; then
+    git stash pop --quiet 2>/dev/null || true
+  fi
+  rm -rf "$tmpdir"
+  exit $exit_code
+}
+trap cleanup EXIT
 
 echo "=== Benchmarking current branch ($current_branch) ==="
 go test -bench="$BENCH_PATTERN" -benchmem -run='^$' -count="$BENCH_COUNT" -timeout="$BENCH_TIMEOUT" ./... > "$new_out" 2>&1 || true
