--- a/mise.toml
+++ b/mise.toml
@@ -243,3 +243,7 @@ run = "E2E_AGENT=claude-code go test -tags=e2e -count=1 -timeout=30m -v ./cmd/en
 [tasks."test:e2e:gemini"]
 description = "Run E2E tests with Gemini CLI (sequential to avoid rate limits)"
 run = "E2E_AGENT=gemini go test -tags=e2e -count=1 -parallel 1 -timeout=30m -v ./cmd/entire/cli/e2e_test/..."
+
+[tasks."test:e2e:opencode"]
+description = "Run E2E tests with OpenCode"
+run = "E2E_AGENT=opencode go test -tags=e2e -count=1 -timeout=30m -v ./cmd/entire/cli/e2e_test/..."
